# file-transfer

./: CMakeLists.txt  README.md
common/: crc.cpp  crc.hpp  log.cpp  log.hpp  message.cpp  message.hpp  socket.hpp  typedef.hpp
src/client/: client.cpp  client.hpp  main.cpp
src/server/: main.cpp  server.cpp  server.hpp
